--- a/front/src/routes/styles/question.scss
+++ b/front/src/routes/styles/question.scss
@@ -1,3 +1,6 @@
-h1 {
-    background-color: blue;
+.question-container {
+    display: flex;
+    border: 2px solid red;
+    justify-content: center;
+    font-size: 40px;
 }
