--- a/front/src/routes/styles/question.scss
+++ b/front/src/routes/styles/question.scss
@@ -3,4 +3,6 @@
     border: 2px solid red;
     justify-content: center;
     font-size: 40px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    font-weight:400;
 }
