--- a/front/src/routes/styles/styles.scss
+++ b/front/src/routes/styles/styles.scss
@@ -1,9 +1,10 @@
 :global {
     body {
-        font-family: 'Arial', sans-serif;
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 16px;
-        color: #333;
-        background-color: (rgb(222, 219, 8));
+        color: #ffffff;
+        background-color: #595959;
+        border: 2px solid green;
     }
 }
 
@@ -12,7 +13,8 @@
     flex-direction: column;
     justify-content: center;
     border: 2px solid blue;
-    width: 97vw;
-    height: 97vh;
+    gap: 20px;
+    width: 57%;
+    height: 80vh;
     margin: auto;
 }
