--- a/front/src/routes/styles/answer.scss
+++ b/front/src/routes/styles/answer.scss
@@ -3,29 +3,29 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding: 10px;
 
     // pretty stuff
-    border: 2px solid red;
+    //border: 2px solid pink;
     // temp
     height:15%;
-    padding : 20px;
 }
 .answ-input {
     text-align: center;
     text-decoration: none;
-    // templ
     width: 80%;
-    height: 30%;
-    padding: 30px;
-    margin: 10px;
-
-    margin:auto;
+    line-height: 1;
+    padding-bottom: 0;
+    padding-top: 25px;
+    //height: 90%;
     font-size:30px;
     //pretty stuff
-    background-color: gray;
+    background-color: rgb(143, 143, 143);
     border : 4px solid black;
     border-radius: 35px;
-    color : white;
+    color : #ffffff;
+    resize: none;
+    align-items: center;
 
     overflow:hidden;
     &:focus {
