--- a/front/src/routes/styles/finishButton.scss
+++ b/front/src/routes/styles/finishButton.scss
@@ -1,6 +1,6 @@
 .button-container{
     display: flex;
-    border: 2px solid black;
+    //border: 2px solid black;
     justify-content: center;
     font-size: 40px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
