--- a/front/src/routes/styles/question.scss
+++ b/front/src/routes/styles/question.scss
@@ -1,6 +1,6 @@
 .question-container {
     display: flex;
-    border: 2px solid red;
+    //border: 2px solid red;
     justify-content: center;
     font-size: 40px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
