--- a/front/src/routes/styles/styles.scss
+++ b/front/src/routes/styles/styles.scss
@@ -4,7 +4,7 @@
         font-size: 16px;
         color: #ffffff;
         background-color: #595959;
-        border: 2px solid green;
+        //border: 2px solid green;
     }
 }
 
@@ -12,9 +12,85 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 2px solid blue;
+    //border: 2px solid blue;
     gap: 20px;
-    width: 57%;
-    height: 80vh;
+    width: 65%;
+    height: 85vh;
     margin: auto;
+}
+
+.tiles-container {
+    display: grid;
+    gap: 10px;
+    width: 100%;
+    //border: 2px solid green;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.tiles-container[data-length="1"] {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    width: 100%;
+}
+
+.tiles-container[data-length="2"] {
+    display: inline-flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.tiles-container[data-length="3"] {
+    display: inline-flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.tiles-container[data-length="4"] {
+    display: inline-flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.tiles-container[data-length="5"] {
+    display: block;    
+    text-align: center;
+    grid-template-columns: repeat(2, 1fr); /* Two columns */
+    gap: 10px;
+    width: 100%;
+}
+
+.tiles-container[data-length="6"] {
+    display: block;    
+    text-align: center;
+    grid-template-columns: repeat(2, 1fr); /* Two columns */
+    gap: 10px;
+    width: 100%;
+}
+
+.tiles-container[data-length="7"] {
+    display: block;    
+    text-align: center;
+    grid-template-columns: repeat(2, 1fr); /* Two columns */
+    gap: 10px;
+    width: 100%;
+}
+
+.tiles-container[data-length="8"] {
+    display: block;    
+    text-align: center;
+    grid-template-columns: repeat(2, 1fr); /* Two columns */
+    gap: 10px;
+    width: 100%;
+}
+
+.tiles-container[data-length="9"] {
+    display: block;    
+    text-align: center;
+    grid-template-columns: repeat(2, 1fr); /* Two columns */
+    gap: 10px;
+    width: 100%;
 }
