--- a/front/src/routes/styles/question.scss
+++ b/front/src/routes/styles/question.scss
@@ -2,7 +2,8 @@
     display: flex;
     //border: 2px solid red;
     justify-content: center;
+    color: black;
     font-size: 40px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    text-shadow: 2px 2px 8px #8c8cff; 
     font-weight:400;
 }
