--- a/front/src/routes/styles/answer.scss
+++ b/front/src/routes/styles/answer.scss
@@ -20,16 +20,16 @@
     //height: 90%;
     font-size:30px;
     //pretty stuff
-    background-color: rgb(143, 143, 143);
-    border : 4px solid black;
+    background-color: rgb(255, 255, 255);
+    border : 2px solid rgb(188, 188, 244);
     border-radius: 35px;
-    color : #ffffff;
+    color : #8c8cff;
     resize: none;
     align-items: center;
 
     overflow:hidden;
     &:focus {
-        border : 4px solid black;
+        border : 2px solid #8c8cff;
         outline:none;
     }
 }
