--- a/front/src/routes/styles/finishButton.scss
+++ b/front/src/routes/styles/finishButton.scss
@@ -3,23 +3,24 @@
     //border: 2px solid black;
     justify-content: center;
     font-size: 40px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
     font-weight:400;
 }
 
 .result-button{
-    height: 60px;
-    width: 120px;
-    background-color: #383838;
+    font-size: 20px;
+    height: 70px;
+    width: 150px;
+    background-color: rgb(188, 188, 244);
     color: white;
     border-radius: 12px;
-    border: 2px solid rgb(104, 104, 104);
+    border: 2px solid rgb(188, 188, 244);
+    text-shadow: 2px 2px 4px rgba(120, 120, 250, 0.5); 
 }
 
 .result-button:hover{
-    background-color:rgb(143, 143, 143);
+    background-color:rgb(180, 180, 244);
 }
 
 .result-button:active{
-    background-color:rgb(32, 32, 32);
+    background-color:rgb(188, 188, 244);
 }
