--- a/front/src/routes/styles/styles.scss
+++ b/front/src/routes/styles/styles.scss
@@ -3,7 +3,8 @@
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 16px;
         color: #ffffff;
-        background-color: #595959;
+        background: rgb(2,0,36);
+        background: radial-gradient(circle, rgba(255,255,240,1) 0%, rgba(188,188,244,1) 100%);
         //border: 2px solid green;
     }
 }
