--- a/front/src/routes/styles/keepAskingButton.scss
+++ b/front/src/routes/styles/keepAskingButton.scss
@@ -1,4 +1,4 @@
-.button-container{
+.continueButton-container{
     display: flex;
     //border: 2px solid black;
     justify-content: center;
@@ -6,23 +6,23 @@
     font-weight:400;
 }
 
-.result-button{
+.continueButton-button{
     height: 60px;
     width: 70%;
     background-color: #383838;
     color: white;
-    font-size: 20px;
+    font-size: 25px;
     border-radius: 12px;
     border: 2px solid rgb(104, 104, 104);
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3); 
 
 }
 
-.result-button:hover{
+.continueButton-button:hover{
     background-color:rgb(143, 143, 143);
     cursor: pointer;
 }
 
-.result-button:active{
+.continueButton-button:active{
     background-color:rgb(32, 32, 32);
 }
