--- a/front/src/routes/styles/styles.scss
+++ b/front/src/routes/styles/styles.scss
@@ -4,7 +4,7 @@
         font-size: 16px;
         color: #ffffff;
         background-color: #595959;
-        //border: 2px solid green;
+        border: 2px solid green;
     }
 }
 
@@ -12,10 +12,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    //border: 2px solid blue;
+    border: 2px solid blue;
     gap: 20px;
     width: 65%;
-    height: 85vh;
+    height: 95vh;
     margin: auto;
 }
 
@@ -23,7 +23,7 @@
     display: grid;
     gap: 10px;
     width: 100%;
-    //border: 2px solid green;
+    border: 2px solid green;
     padding: 10px;
     box-sizing: border-box;
 }
