--- a/front/src/routes/styles/answerTile.scss
+++ b/front/src/routes/styles/answerTile.scss
@@ -2,7 +2,7 @@
     //display: flex;
     //text-align: center;
     //width: 100%;
-    height: 50px;
+    height: 80px;
     width: 30%;
     margin: 10px;
     background-color: #b7b7b7;
@@ -11,6 +11,7 @@
     color: white;
     font-size: 20px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);     
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3); 
 }
 
 .tile-button:hover {
