update ui styles

--- a/front/src/routes/styles/answer.scss
+++ b/front/src/routes/styles/answer.scss
@@ -20,11 +20,12 @@
     padding-top: 25px;
     //height: 90%;
     font-size:30px;
+    font-family: unset;
     //pretty stuff
     background-color: rgb(255, 255, 255);
     border : 2px solid rgb(188, 188, 244);
     border-radius: 35px;
-    color : #8c8cff;
+    // color : #8c8cff;
     resize: none;
     align-items: center;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3); /* Add shadow to button */
