--- a/front/src/routes/styles/finishButton.scss
+++ b/front/src/routes/styles/finishButton.scss
@@ -3,27 +3,36 @@
     //border: 2px solid black;
     justify-content: center;
     font-size: 40px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
-    font-weight:400;
+    text-shadow: 2px 2px 4px #383838;
 }
 
 .result-button{
     font-size: 20px;
-    height: 60px;
+    height: 80px;
     width: 70%;
-    background-color: #383838;
     color: white;
-    font-size: 20px;
+    font-size: 27px;
     border-radius: 12px;
-    border: 2px solid rgb(188, 188, 244);
-    text-shadow: 2px 2px 4px rgba(120, 120, 250, 0.5); 
+    // border: 2px solid rgb(188, 188, 244);
+    border: none;
+    text-shadow: 2px 2px 4px rgba(120, 120, 250, 0.5);
+
+    background-color: #383838;
+    box-shadow: 0px 0px 20px rgba(120, 120, 250, 0);
+    
+    transition: background-color 150ms ease-out,
+        box-shadow 150ms ease-out;
 }
 
 .result-button:hover{
-    background-color:rgb(180, 180, 244);
+    // background-color:rgb(180, 180, 244);
+    // background-color: rgba(0, 0, 0, 0.5);
+    background-color: #56595c;
+    box-shadow: 0px 0px 20px rgba(120, 120, 250, 1);
+
     cursor: pointer;
 }
 
 .result-button:active{
-    background-color:rgb(188, 188, 244);
+    background-color:rgb(144, 144, 174);
 }
