--- a/front/src/routes/styles/question.scss
+++ b/front/src/routes/styles/question.scss
@@ -2,8 +2,9 @@
     display: flex;
     //border: 2px solid red;
     justify-content: center;
+    align-items: center;
+    text-align: center;
     color: black;
-    font-size: 40px;
-    text-shadow: 2px 2px 8px #8c8cff; 
-    font-weight:400;
+    font-size: 2em;
+    text-shadow: 2px 2px 8px #747474;
 }
