--- a/front/src/routes/styles/styles.scss
+++ b/front/src/routes/styles/styles.scss
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :global {
     body {
-        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family: "Roboto", sans-serif;
+        font-weight: 300;
         font-size: 16px;
         color: #ffffff;
-        background: radial-gradient(circle, rgba(255,255,240,1) 0%, rgba(188,188,244,1) 100%);
+        background: radial-gradient(circle at 50% 100%, rgb(238, 238, 238) 0%, rgb(174, 174, 255) 100%);
         //border: 2px solid green;
+        margin: 0;
+
+        height: 100vh;
     }
 }
 
@@ -12,10 +18,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 2px solid blue;
+
+    height: 100%;
+    // border: 2px solid blue;
     gap: 20px;
     width: 65%;
-    height: 95vh;
+    // height: 95vh;
     margin: auto;
 }
 
@@ -23,7 +31,7 @@
     display: grid;
     gap: 10px;
     width: 100%;
-    border: 2px solid green;
+    // border: 2px solid green;
     padding: 10px;
     box-sizing: border-box;
 }
