--- a/front/src/routes/styles/answerTile.scss
+++ b/front/src/routes/styles/answerTile.scss
@@ -1,6 +1,7 @@
 .tile-button {
-    //display: flex;
-    //text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     //width: 100%;
     height: 150px;
     width: 150px;
