--- a/front/src/routes/styles/styles.scss
+++ b/front/src/routes/styles/styles.scss
@@ -30,92 +30,96 @@
 }
 
 .tiles-container {
-    display: grid;
-    gap: 10px;
-    width: 100%;
-    //border: 2px solid green;
-    padding: 10px;
-    box-sizing: border-box;
-}
-
-.tiles-container[data-length="1"] {
     display: flex;
     flex-direction: row;   
-    flex-wrap: wrap; 
-    //gap: 10px;
-    width: 100%;
-}
-
-.tiles-container[data-length="2"] {
-    display: flex;
-    flex-direction: row;   
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
+    text-align: center;
+    
+    align-items: center;
     justify-content: center;
-    width: 100%;
-}
 
-.tiles-container[data-length="3"] {
-    display: flex;
-    flex-direction: row;   
-    flex-wrap: wrap; 
-    justify-content: center;
-    width: 100%;
-}
-
-.tiles-container[data-length="4"] {
-    display: flex;
-    flex-direction: row;   
-    flex-wrap: wrap; 
-    justify-content: center;
-    width: 100%;
-}
-
-.tiles-container[data-length="5"] {
-    display: flex;
-    flex-direction: row;   
-    flex-wrap: wrap;    
-    text-align: center;
-    grid-template-columns: repeat(2, 1fr); /* Two columns */
     //gap: 10px;
     width: 100%;
 }
 
-.tiles-container[data-length="6"] {
-    display: flex;
-    flex-direction: row;   
-    flex-wrap: wrap;   
-    text-align: center;
-    grid-template-columns: repeat(2, 1fr); /* Two columns */
-    //gap: 10px;
-    width: 100%;
-}
+// .tiles-container[data-length="1"] {
+//     display: flex;
+//     flex-direction: row;   
+//     flex-wrap: wrap; 
+//     //gap: 10px;
+//     width: 100%;
+// }
 
-.tiles-container[data-length="7"] {
-    display: flex;
-    flex-direction: row;   
-    flex-wrap: wrap;     
-    text-align: center;
-    grid-template-columns: repeat(2, 1fr); /* Two columns */
-    //gap: 10px;
-    width: 100%;
-}
+// .tiles-container[data-length="2"] {
+//     display: flex;
+//     flex-direction: row;   
+//     flex-wrap: wrap; 
+//     justify-content: center;
+//     width: 100%;
+// }
 
-.tiles-container[data-length="8"] {
-    display: flex;
-    flex-direction: row;   
-    flex-wrap: wrap;     
-    text-align: center;
-    grid-template-columns: repeat(2, 1fr); /* Two columns */
-    //gap: 10px;
-    width: 100%;
-}
+// .tiles-container[data-length="3"] {
+//     display: flex;
+//     flex-direction: row;   
+//     flex-wrap: wrap; 
+//     justify-content: center;
+//     width: 100%;
+// }
 
-.tiles-container[data-length="9"] {
-    display: flex;
-    flex-direction: row;   
-    flex-wrap: wrap; 
-    text-align: center;
-    grid-template-columns: repeat(2, 1fr); /* Two columns */
-    //gap: 10px;
-    width: 100%;
-}
+// .tiles-container[data-length="4"] {
+//     display: flex;
+//     flex-direction: row;   
+//     flex-wrap: wrap; 
+//     justify-content: center;
+//     width: 100%;
+// }
+
+// .tiles-container[data-length="5"] {
+//     display: flex;
+//     flex-direction: row;   
+//     flex-wrap: wrap;    
+//     text-align: center;
+//     grid-template-columns: repeat(2, 1fr); /* Two columns */
+//     //gap: 10px;
+//     width: 100%;
+// }
+
+// .tiles-container[data-length="6"] {
+//     display: flex;
+//     flex-direction: row;   
+//     flex-wrap: wrap;   
+//     text-align: center;
+//     grid-template-columns: repeat(2, 1fr); /* Two columns */
+//     //gap: 10px;
+//     width: 100%;
+// }
+
+// .tiles-container[data-length="7"] {
+//     display: flex;
+//     flex-direction: row;   
+//     flex-wrap: wrap;     
+//     text-align: center;
+//     grid-template-columns: repeat(2, 1fr); /* Two columns */
+//     //gap: 10px;
+//     width: 100%;
+// }
+
+// .tiles-container[data-length="8"] {
+//     display: flex;
+//     flex-direction: row;   
+//     flex-wrap: wrap;     
+//     text-align: center;
+//     grid-template-columns: repeat(2, 1fr); /* Two columns */
+//     //gap: 10px;
+//     width: 100%;
+// }
+
+// .tiles-container[data-length="9"] {
+//     display: flex;
+//     flex-direction: row;   
+//     flex-wrap: wrap; 
+//     text-align: center;
+//     grid-template-columns: repeat(2, 1fr); /* Two columns */
+//     //gap: 10px;
+//     width: 100%;
+// }
