--- a/front/src/routes/styles/answerTile.scss
+++ b/front/src/routes/styles/answerTile.scss
@@ -15,6 +15,11 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
     box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.3);
 
+    padding: 10px;
+    box-sizing: border-box;
+
+    position: relative;
+
     transform: scale(1);
 
     transition: background-color 150ms ease-out,
@@ -29,6 +34,14 @@
     transform: scale(1.01);
 
     cursor: pointer;
+
+    & > .tip
+    {
+        top: -120px;
+        width: 500px;
+        height: 120px;
+        background-color: rgb(242, 242, 242);
+    }
 }
 
 .tile-button:active, .tile-button.active {
@@ -36,6 +49,44 @@
     cursor: pointer;
 
     animation: swivel 1s linear 0s 1;
+}
+
+.tip
+{
+    position: absolute;
+
+    left: auto;
+
+    // top: -120px;
+    // width: 500px;
+    // height: 120px;
+    top: 0px;
+    width: 250px;
+    height: 0px;
+
+    background-color: #ffffff;
+    // border: red solid;
+    box-sizing: border-box;
+
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
+    border-radius: 20px 20px 50px 50px;
+
+    overflow: hidden;
+    
+    transition: top 200ms ease-out,
+        width 200ms ease-out,
+        height 200ms ease-out,
+        background-color 200ms ease-out;
+
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+
+    .text
+    {
+        padding: 10px;
+    }
 }
 
 @keyframes swivel {
