--- a/front/src/routes/styles/keepAskingButton.scss
+++ b/front/src/routes/styles/keepAskingButton.scss
@@ -5,23 +5,62 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-.continueButton-button{
-    height: 60px;
-    width: 70%;
-    background-color: #383838;
-    color: white;
-    font-size: 25px;
-    border-radius: 12px;
-    border: 2px solid rgb(104, 104, 104);
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3); 
+// .continueButton-button{
+//     height: 60px;
+//     width: 70%;
+//     background-color: #383838;
+//     color: white;
+//     font-size: 25px;
+//     border-radius: 12px;
+//     border: 2px solid rgb(104, 104, 104);
+//     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3); 
 
+// }
+
+// .continueButton-button:hover{
+//     background-color:rgb(143, 143, 143);
+//     cursor: pointer;
+// }
+
+// .continueButton-button:active{
+//     background-color:rgb(32, 32, 32);
+// }
+
+.button-container{
+    display: flex;
+    //border: 2px solid black;
+    justify-content: center;
+    font-size: 40px;
+    text-shadow: 2px 2px 4px #383838;
+}
+
+.continueButton-button{
+    font-size: 20px;
+    height: 80px;
+    width: 70%;
+    color: white;
+    font-size: 27px;
+    border-radius: 12px;
+    // border: 2px solid rgb(188, 188, 244);
+    border: none;
+    text-shadow: 2px 2px 4px rgba(120, 120, 250, 0.5);
+
+    background-color: #383838;
+    box-shadow: 0px 0px 20px rgba(120, 120, 250, 0);
+    
+    transition: background-color 150ms ease-out,
+        box-shadow 150ms ease-out;
 }
 
 .continueButton-button:hover{
-    background-color:rgb(143, 143, 143);
+    // background-color:rgb(180, 180, 244);
+    // background-color: rgba(0, 0, 0, 0.5);
+    background-color: #56595c;
+    box-shadow: 0px 0px 20px rgba(120, 120, 250, 1);
+
     cursor: pointer;
 }
 
 .continueButton-button:active{
-    background-color:rgb(32, 32, 32);
+    background-color:rgb(144, 144, 174);
 }
