--- a/front/src/routes/styles/reply.scss
+++ b/front/src/routes/styles/reply.scss
@@ -1,10 +1,28 @@
+.title
+{
+    text-align: center;
+    font-size: 30px;
+    color: black;
+    text-shadow: 2px 2px 8px #747474;
+}
 .reply-container {
     display: flex;
     //border: 2px solid red;
+    flex-flow: row;
     justify-content: center;
+    align-items: center;
     color: black;
-    font-size: 40px;
-    text-shadow: 2px 2px 8px #8c8cff;
+    font-size: 26px;
+    // text-shadow: 2px 2px 8px #8c8cff;
+
+    & > div
+    {
+        background: white;
+        border-radius: 20px;
+        padding: 30px;
+    }
+
+    margin-bottom: 10px;
 }
 
 .hobbylist {
