--- a/front/src/routes/styles/answer.scss
+++ b/front/src/routes/styles/answer.scss
@@ -9,7 +9,8 @@
     // pretty stuff
     //border: 2px solid pink;
     // temp
-    height:15%;
+    // height:15%;
+    padding-bottom: 20px;
 }
 .answ-input {
     text-align: center;
