--- a/front/src/routes/styles/theme.scss
+++ b/front/src/routes/styles/theme.scss
@@ -1,7 +1,7 @@
 .theme-container {
     position: absolute;
-    top:0;
-    right:0;
+    top:40px;
+    right:20px;
     margin : 40px;
     background-color : black;
     width:70px;
@@ -12,18 +12,23 @@
     align-content: center;
 
     background:none;
-
 }
 
 .theme {
     align-content : center;
     justify-content : center;
-    font-size:100px;
+    font-size:70px;
     cursor:pointer;
-    &:hover {
+    &:active {
         margin-top :10px;
-        transition: margin 0.5 ease-in-out;
+        transition: margin 0.3 ease-in-out;
     }
     margin-bottom:10px;
-    transition: margin 0.2s ease-in-out;
+    transition: margin 0.1s ease-in-out;
+    color: rgb(31, 31, 31);
+
+    &.dark
+    {
+        color: rgb(226, 226, 226);
+    }
 }
