--- a/front/src/routes/styles/question.scss
+++ b/front/src/routes/styles/question.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: black;
+    color: var(--fg);
     font-size: 1.7em;
     text-shadow: 2px 2px 8px #747474;
 }
