--- a/front/src/routes/styles/answer.scss
+++ b/front/src/routes/styles/answer.scss
@@ -48,7 +48,7 @@
 
 .answ-button {
     position: absolute; /* Position the button absolutely within the container */
-    top: 50%; /* Center vertically */
+    top: 55px; /* Center vertically */
     left: 86%; /* Center horizontally */
     width: 10px;
     transform: translate(-50%, -50%); /* Adjust position to be centered */
